--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,10 +2,10 @@ services:
   app:
     container_name: TOC-web_scraping
     build:
-    context: ./
-    dockerfile: dockerfile
-    ports:
-      - '5000:5000'
+      context: ./
+      dockerfile: dockerfile
+    # ports:
+    #   - '5000:5000'
     networks:
       - tunnel
 
