--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,4 +15,4 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build the Docker image
-      run: pwd && docker build . --file Dockerfile --tag flask-python-toc:3
+      run: docker compose up --force-recreate --build --detach
