--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,8 +4,8 @@ services:
     build:
       context: ./
       dockerfile: Dockerfile
-    # ports:
-    #   - '5000:5000'
+    ports:
+      - '5000:5000'
     networks:
       - tunnel
 
